# -*- mode: Makefile; tab-width: 4; indent-tabs-mode: 1; st-rulers: [70] -*-
# vim: ts=8 sw=8 ft=Makefile noet

bin_PROGRAMS = vtepd

vtepd_SOURCES =  \
	api.c api.h \
	api/ip_add.c api/ip_add.h \
	api/ip_list.c api/ip_list.h \
	api/ip_remove.c api/ip_remove.h \
	api/node_add.c api/node_add.h \
	api/node_list.c api/node_list.h \
	api/node_remove.c api/node_remove.h \
	api/ping.c api/ping.h \
	api/status.c api/status.h \
	async_io.c async_io.h \
	config.c config.h \
	helper.c helper.h \
	log.c log.h \
	node.c node.h \
	route.c route.h \
	tun.c tun.h \
	udp.c udp.h \
	vtepd.c vtepd.h \
	vxlan.c vxlan.h \
	util/adlist.c util/adlist.h \
	util/cmd.c util/cmd.h \
	util/dict.c util/dict.h \
	util/setproctitle.c \
	util/sds.c util/sds.h \
	util/util.c util/util.h
